--- a/plots.Rmd
+++ b/plots.Rmd
@@ -325,6 +325,47 @@ p2 <- size_depth_ratios(depth_ratios, "rapid", "",
 plot_grid(p1, p2, ncol = 2, align="hv")
 ```
 
+
+This is the same plot, but with the points coloured by the genome of origin. However, I didn't think it really added useful info (and it busied up the plot), so I didn't use this one.
+
+```{r depth_vs_plasmid_size_colour_by_genome, fig.width = 8, fig.height = 3.75, useDingbats = FALSE}
+depth_ratios <- data.frame(replicon_data$Replicon)
+depth_ratios$Genome <- replicon_data$Genome
+depth_ratios$Size <- replicon_data$Size
+depth_ratios$size_log <- log10(depth_ratios$Size)
+depth_ratios$rapid_to_illumina <- replicon_data$rapid_to_illumina
+depth_ratios$rapid_to_illumina_log <- log10(depth_ratios$rapid_to_illumina)
+depth_ratios$ligation_to_illumina <- replicon_data$ligation_to_illumina
+depth_ratios$ligation_to_illumina_log <- log10(depth_ratios$ligation_to_illumina)
+colnames(depth_ratios) <- c("replicon", "genome", "size", "size_log", "rapid", "rapid_log", "ligation", "ligation_log")
+depth_ratios %>% filter(replicon != "chromosome") %>% drop_na() %>% select(-replicon) -> depth_ratios
+
+size_depth_ratios <- function(depth_ratios, column_name, plot_title, y_title, line_colour) {
+  column_name <- sym(column_name)
+
+  p <- ggplot(depth_ratios, aes(x = size, y = !!column_name)) +
+    geom_hline(yintercept=1, linetype="dashed", colour = "#888888") +
+    geom_smooth(method='lm', size=0.5, se = FALSE, colour=line_colour) +
+    geom_point(aes(colour = genome)) +
+    theme_bw() + theme(plot.background = element_blank(), legend.position = "none") +
+    scale_x_log10(breaks = c(1000, 3000, 10000, 30000, 100000, 300000), labels = c("1", "3", "10", "30", "100", "300"), minor_breaks = NULL, expand=c(0, 0)) +
+    scale_y_log10(breaks = c(0.01, 0.1, 1, 10), labels = c("0.01", "0.1", "1", "10"), minor_breaks = NULL) +
+    coord_fixed(xlim = c(1000, 300000), ylim = c(0.007, 10), ratio=0.7) +
+    labs(x = "Plasmid size (kbp)", y = y_title, title = plot_title)
+
+  return(p)
+}
+
+p1 <- size_depth_ratios(depth_ratios, "ligation",
+                        "Oxford Nanopore vs Illumina sequencing read depths for plasmids\n",
+                        "Ligation:Illumina read depth ratio", "#444444")
+p2 <- size_depth_ratios(depth_ratios, "rapid", "",
+                        "Rapid:Illumina read depth ratio", "#444444")
+
+plot_grid(p1, p2, ncol = 2, align="hv")
+```
+
+
 I wanted p-values for whether or not there is a relationship between plasmid size and the ONT/Illumina depth ratio. I.e. the null hypothesis is that the slope = 0.
 
 ```{r}
