Change license on plots script

--- a/plots.Rmd
+++ b/plots.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Small plasmid analysis"
-date: "2021-01-29"
+date: "2021-02-22"
 author: "Ryan Wick"
 output:
   html_document:
@@ -23,7 +23,7 @@ It takes as input:
   * `tech_rep_2_rapid_reads.tsv.gz`
 * One TSV file of sliding-window GC and depth values: `gc_and_depth.tsv.gz`
 
-This script is licensed under a Creative Commons Attribution 4.0 International License. You should have received a copy of the license along with this work. If not, see <http://creativecommons.org/licenses/by/4.0/>.
+This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version. This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details. You should have received a copy of the GNU General Public License along with this program. If not, see <https://www.gnu.org/licenses/>.
 
 
 
